err/p01.kibana.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/p01'...
Listing './lib/python3.5/site-packages/p01/kibana'...
Compiling './lib/python3.5/site-packages/p01/kibana/backend.py'...
***   File "./lib/python3.5/site-packages/p01/kibana/backend.py", line 99
    except StandardError, ex:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p01/kibana/client.py'...
***   File "./lib/python3.5/site-packages/p01/kibana/client.py", line 45
    except ValueError, ex:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p01/kibana/logger.py'...
***   File "./lib/python3.5/site-packages/p01/kibana/logger.py", line 38
    except (ValueError, TypeError), e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p01/kibana/scripts.py'...
***   File "./lib/python3.5/site-packages/p01/kibana/scripts.py", line 110
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p01/kibana/server.py'...
***   File "./lib/python3.5/site-packages/p01/kibana/server.py", line 177
    except KeyboardInterrupt, ex:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p01/kibana/tests'...
Listing './lib/python3.5/site-packages/p01.kibana-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
